Updates to method of data retrieval to use loop to wait for loaded value instead of thread join.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,18 +16,31 @@
     <string name="refresh">Refreshing List Contents...&#160;</string>
     <string name="dateerror">Sorry, it looks like you\'re missing a to or from date.</string>
     <string name="nodata">Sorry, it looks like there\'s nothing for this range.</string>
-    <string name="selectid">Selected ID:&#160;</string>
-    <string name="location">Location:&#160;</string>
-    <string name="title">Title:&#160;</string>
-    <string name="category">Category:&#160;</string>
-    <string name="depth">Depth:&#160;</string>
-    <string name="magnitude">Magnitude:&#160;</string>
-    <string name="desc">Description:&#160;</string>
-    <string name="link">Link:&#160;</string>
-    <string name="publish">Published:&#160;</string>
-    <string name="lat">Latitude:&#160;</string>
-    <string name="lon">Longitude:&#160;</string>
-    <string name="orig">Origin Date:&#160;</string>
+    <string name="selectid">Selected ID: %d&#160;</string>
+    <string name="location">Location: %s&#160;</string>
+    <string name="title">Title: %s&#160;</string>
+    <string name="category">Category: %s&#160;</string>
+    <string name="depth">Depth: %d %s&#160;</string>
+    <string name="magnitude">Magnitude: %f&#160;</string>
+    <string name="desc">Description: %s&#160;</string>
+    <string name="link">Link: %s&#160;</string>
+    <string name="publish">Published: %s&#160;</string>
+    <string name="lat">Latitude: %f&#160;</string>
+    <string name="lon">Longitude: %f&#160;</string>
+    <string name="orig">Origin Date: %s&#160;</string>
+
+    <string name="lablocation">Location:&#160;</string>
+    <string name="labtitle">Title:&#160;</string>
+    <string name="labcategory">Category:&#160;</string>
+    <string name="labdepth">Depth:&#160;</string>
+    <string name="labmagnitude">Magnitude:&#160;</string>
+    <string name="labdesc">Description:&#160;</string>
+    <string name="lablink">Link:&#160;</string>
+    <string name="labpublish">Published:&#160;</string>
+    <string name="lablat">Latitude:&#160;</string>
+    <string name="lablon">Longitude:&#160;</string>
+    <string name="laborig">Origin Date:&#160;</string>
+
     <string name="searchtext">&#160;Search&#160;</string>
     <string name="back">&#160;Back&#160;</string>
     <string name="northernmost">Northernmost with a Lat of: %f - %s&#160;</string>
